--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -7,5 +7,9 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="/add">add</a>
+    <a href="/delete">delete</a>
+    <a href="/update">update</a>
+    
   </body>
 </html>
