--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -6,3 +6,11 @@ body {
 a {
   color: #00B7FF;
 }
+
+table,tr,th,td{
+  border-collapse: collapse;
+  border: 4px solid black;
+}
+th,td{
+  padding:1rem;
+}
