--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,6 +2,7 @@
 <html>
   <%- include('head') -%> 
   <body>
+    <%- include('header') -%> 
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   
