--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <%- include('head') -%> 
+  <%- include('head') -%>
   <body>
-    <%- include('header') -%> 
+    <%- include('header') -%>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-  
-    <hr>
-    <table>
-        <tr>
-          <th>id</th>
-          <th>name</th>
-          <th>age</th>
-          <th>position</th>
-          <th>p_profile</th>
-          <th colspan="3">คำสั่ง</th>
-        </tr>
-        <tr>
-            <!-- test 1 row -->
-            <td>0</td>
-            <td>A</td>
-            <td>22</td>
-            <td>programmer</td>
-            <td><img src="emp_id_1.jpg" alt="emp_id_1.jpg"></td>
-            <td><a href="/add">add</a></td>
-            <td><a href="/delete">delete</a></td>
-            <td><a href="/update">update</a></td>
-        </tr>
-    </table>
-    
-    
-    
 
+    <hr />
+    <table>
+      <tr>
+        <th>id</th>
+        <th>name</th>
+        <th>age</th>
+        <th>position</th>
+        <th>p_profile</th>
+        <th colspan="3">คำสั่ง</th>
+      </tr>
+      <tr>
+        <!-- test 1 row -->
+        <td>0</td>
+        <td>A</td>
+        <td>22</td>
+        <td>programmer</td>
+        <td><img src="emp_id_1.jpg" alt="emp_id_1.jpg" /></td>
+        <td><a href="/add">add</a></td>
+        <td><a href="/delete">delete</a></td>
+        <td><a href="/update">update</a></td>
+      </tr>
+      <% emp.forEach((item,index)=>{ %>
+      <tr>
+        <td><%= item.id %></td>
+        <td><%= item.name %></td>
+        <td><%= item.age %></td>
+        <td><%= item.position %></td>
+        <td>
+          <!-- <img src='<%= item.p_profile %>'  alt="" /> -->
+          <p><%= item.p_profile %></p>
+        </td>
+
+        <td><a href="/delete?id=<%= item.id %> ">delete</a></td>
+        <td><a href="/update?id=<%= item.id %>">update</a></td>
+      </tr>
+
+      <% }); %>
+    </table>
+    <td><a href="/add">add</a></td>
   </body>
 </html>
