--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -40,7 +40,7 @@
 
         <!-- <td><a href="/delete/<%= item.id %> ">delete</a></td> -->
         <td><a href="/delete?id=<%= item.id %> ">delete</a></td>
-        <td><a href="/update?id=<%= item.id %>">update</a></td>
+        <td><a href="/edit?id=<%= item.id %>">update</a></td>
       </tr>
 
       <% }); %>
