--- a/app/views/add.ejs
+++ b/app/views/add.ejs
@@ -2,28 +2,57 @@
 <html lang="en">
   <%- include('head') -%>
   <body>
-    <div class="container text-center">
-      <%- include('header') -%>
-      <form action="/add" method="post">
-        <div class="form-group">
-          <label for="">Name</label><br />
-          <input type="text" name="name" />
+    <div class="row" style="margin: 0;padding:0">
+      <div class="col" style="margin: 0;padding:0"><%- include('header') -%></div>
+    </div>
+    <br><br>
+    <div class="container">
+      <div class="row justify-content-center">
+        <class class="col-4 text-center">
+      
+              <h1>Add page</h1>
+          </class>
         </div>
-        <div class="form-group">
-          <label for="">Age</label><br />
-          <input type="text" name="age" />
-        </div>
-        <div class="form-group">
-          <label for="">Position</label><br />
-          <input type="text" name="position" />
-        </div>
-        <div class="form-group">
-          <label for="">Your Image</label><br />
-          <input type="text" name="img" />
+      </div>
+      <div class="form-content">
+
+        <div class="row justify-content-center">
+
+          <div class="col-4" style="background:#2a3d66;padding:1rem 1rem 1rem;color:white;border-radius: 10px;">
+
+            <form action="/add" method="post">
+              <div class="form-group">
+                <label for="">Name</label><br />
+                <input class="form-control" type="text" name="name" />
+              </div>
+              <div class="form-group">
+                <label for="">Age</label><br />
+                <input class="form-control" type="number" name="age" />
+              </div>
+              <div class="form-group">
+                <label for="">Position</label><br />
+                <input class="form-control"type="text" name="position" />
+              </div>
+              <div class="form-group">
+                <label for="">Your Image</label><br />
+                <input class="form-control"type="text" name="img" />
+              </div>
+              <div class="row justify-content-end">
+                <div class="col-3">
+                  <button type="submit" class="btn btn-light">add</button>
+                </div>
+              </div>
+              
+              
+            </form>
+
+          </div>
+
         </div>
 
-        <button type="submit" class="btn btn-primary">add</button>
-      </form>
+      </div>
+
+      
     </div>
   </body>
 </html>
