--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,50 +1,78 @@
 <!DOCTYPE html>
 <html>
   <%- include('head') -%>
-  <body>
-    <%- include('header') -%>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
 
-    <hr />
-    <table>
-      <tr>
-        <th>id</th>
-        <th>name</th>
-        <th>age</th>
-        <th>position</th>
-        <th>p_profile</th>
-        <th colspan="2">คำสั่ง</th>
-      </tr>
-      <tr>
-        <!-- test 1 row -->
-        <td>0</td>
-        <td>A</td>
-        <td>22</td>
-        <td>programmer</td>
-        <td><img src="emp_id_1.jpg" alt="emp_id_1.jpg" /></td>
-        <!-- <td><a href="/add">add</a></td> -->
-        <td><a href="/delete">delete</a></td>
-        <td><a href="/update">update</a></td>
-      </tr>
-      <% emp.forEach((item,index)=>{ %>
-      <tr>
-        <td><%= item.id %></td>
-        <td><%= item.name %></td>
-        <td><%= item.age %></td>
-        <td><%= item.position %></td>
-        <td>
-          <!-- <img src='<%= item.p_profile %>'  alt="" /> -->
-          <p><%= item.p_profile %></p>
-        </td>
+  <body >
+    <div class="row" style="margin: 0;padding:0">
+      <div class="col" style="margin: 0;padding:0"><%- include('header') -%></div>
+    </div>
 
-        <!-- <td><a href="/delete/<%= item.id %> ">delete</a></td> -->
-        <td><a href="/delete?id=<%= item.id %> ">delete</a></td>
-        <td><a href="/edit?id=<%= item.id %>">update</a></td>
-      </tr>
+    <div class="container">
+   
 
-      <% }); %>
-    </table>
-    <td><a href="/add">add</a></td>
+        <header>
+
+          <div class="row justify-content-between align-items-end">
+            <div class="col-6">
+              <h1><%= title %></h1>
+              <p>Welcome to <%= title %></p>
+            </div>
+            <div class="col-6">
+                <div class="row">
+                  <div class="col text-right"><a class="btn btn-success" style="margin: 1rem 0rem 1rem;" href="/add">add</a></div>
+                </div>
+                
+                <!--  -->
+            </div>
+          </div>
+
+        </header>
+
+        <hr />
+
+        <!-- table content-->
+        <div class="row justify-content-center">
+          <div class="col">
+            <table class="table text-center table-dark">
+              <thead>
+                <tr>
+                  <th>id</th>
+                  <th>name</th>
+                  <th>age</th>
+                  <th>position</th>
+                  <th>p_profile</th>
+                  <th colspan="2">คำสั่ง</th>
+                </tr>
+              </thead>
+
+              <tbody>
+                
+                <% emp.forEach((item,index)=>{ %>
+                <tr>
+                  <td><%= item.id %></td>
+                  <td><%= item.name %></td>
+                  <td><%= item.age %></td>
+                  <td><%= item.position %></td>
+                  <td>
+                    <!-- <img src='<%= item.p_profile %>'  alt="" /> -->
+                    <p><%= item.p_profile %></p>
+                  </td>
+
+                  <!-- <td><a href="/delete/<%= item.id %> ">delete</a></td> -->
+                  <td><a class="btn btn-danger" href="/delete?id=<%= item.id %> ">delete</a></td>
+                  <td><a  class="btn btn-warning" href="/edit?id=<%= item.id %>">update</a></td>
+                </tr>
+
+                <% }); %>
+              </tbody>
+            </table>
+
+            <br />
+          </div>
+
+        </div>
+        <!-- end table content -->
+     
+    </div>
   </body>
 </html>
